fix(web): Disable overflow hidden for logo

--- a/web/components/Layout/Header/Header.module.scss
+++ b/web/components/Layout/Header/Header.module.scss
@@ -51,6 +51,11 @@ $mobile-header-height: 72px;
     height: 53px;
     left: -11px;
     top: -1px;
+    // Disbale overflow hidden.
+    // This is designed for the Image component from Next.js 12
+    & > span {
+      overflow: visible !important;
+    }
   }
 
   .nav {
